--- a/LayoutParts-Q2/css/style.css
+++ b/LayoutParts-Q2/css/style.css
@@ -1,9 +1,10 @@
 @charset "UTF-8";
 /* 回答はここから */
 ul{
-  display: flex;
+  /* display: flex; */
   display: -webkit-flex;
   justify-content: center;
+  height: auto
 }
 
 li{
