--- a/LayoutParts-Q2/css/style.css
+++ b/LayoutParts-Q2/css/style.css
@@ -13,7 +13,16 @@ li{
   border-radius: 13px;
   background-color: #d2b48c;
   margin: 30px;
+  margin-bottom: 0;
   padding: 10px;
   list-style: none;
   box-shadow: 0 0 0 6px #655;
+}
+
+li:first-child{
+  margin-left: 0;
+}
+
+li:last-child{
+  margin-right: 0;
 }
